<!--
  ~  2023.
  ~ Alexey Rasskazov
  --><resources>    <string name="app_name">Subaru</string>    <string name="app_version">1.0.0.0</string>    <string name="ok">OK</string>    <string name="cancel">cancel</string>    <string name="title_activity_fullscreen">FullscreenActivity</string>    <string name="dummy_button">Dummy Button</string>    <string name="dummy_content">DUMMY\nCONTENT</string>    <string name="tuner_background">tuner_background</string>    <string name="avgConsFuel">%.1f</string>    <string name="title_activity_settings">Settings</string>    <!-- Strings related to Settings -->    <!-- Example General settings -->    <string name="pref_header_general">General</string>    <string name="pref_title_CAN_datalogging">Enable CAN messages logging</string>    <string name="pref_description_CAN_datalogging">Logging CAN messages  to file    </string>    <string name="pref_title_LAN_datalogging">Enable Media LAN messages logging</string>    <string name="pref_description_LAN_datalogging">Logging Media LAN messages  to file    </string>    <string name="pref_title_TPMS">TPMS</string>    <string name="pref_description_TPMS">Enable TPMS</string>    <string name="pref_title_engineTemp">Enable temperature </string>    <string name="pref_description_engineTemp">Enable engine temperature warning</string>    <string name="pref_title_display_name">Display name</string>    <string name="pref_default_display_name">John Smith</string>    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>    <string-array name="pref_example_list_titles">        <item>Always</item>        <item>When possible</item>        <item>Never</item>    </string-array>    <string-array name="pref_example_list_values">        <item>1</item>        <item>0</item>        <item>-1</item>    </string-array>    <!-- Example settings for Data & Sync -->    <string name="pref_header_data_sync">Data &amp; sync</string>    <string name="pref_title_sync_frequency">Sync frequency</string>    <string-array name="pref_sync_frequency_titles">        <item>15 minutes</item>        <item>30 minutes</item>        <item>1 hour</item>        <item>3 hours</item>        <item>6 hours</item>        <item>Never</item>    </string-array>    <string-array name="pref_sync_frequency_values">        <item>15</item>        <item>30</item>        <item>60</item>        <item>180</item>        <item>360</item>        <item>-1</item>    </string-array>    <string-array name="list_preference_entries">        <item>Entry 1</item>        <item>Entry 2</item>        <item>Entry 3</item>    </string-array>    <string-array name="list_preference_entry_values">        <item>1</item>        <item>2</item>        <item>3</item>    </string-array>    <string-array name="multi_select_list_preference_default_value" />    <string name="pref_title_system_sync_settings">System sync settings</string>    <!-- Example settings for Notifications -->    <string name="pref_header_notifications">Notifications</string>    <string name="pref_title_new_message_notifications">New message notifications</string>    <string name="pref_title_ringtone">Ringtone</string>    <string name="pref_ringtone_silent">Silent</string>    <string name="pref_title_vibrate">Vibrate</string>    <!-- Example settings for Service -->    <string name="pref_header_service">Periodic maintenance </string>    <string name="pref_title_maintenance">Maintenance schedule</string>    <string name="pref_description_maintenance">Enable maintenance schedule</string>    <string name="settings_key_tpms">TPMS_ENABLE</string>    <string name="settings_key_engineTemp">ENGINe_TEMP_WARNING_ENABLE</string>    <string name="pref_header_about">About</string></resources>