<!--
  ~  2023.
  ~ Alexey Rasskazov
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->


    <header
        android:fragment="com.hzbhd.alexross.subarulan2.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />
    <header
        android:fragment="com.hzbhd.alexross.subarulan2.activities.SettingsActivity$ServicePreferenceFragment"
        android:icon="@drawable/ic_mentain"
        android:title="@string/pref_header_service" />

    <header
        android:fragment="com.hzbhd.alexross.subarulan2.activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.hzbhd.alexross.subarulan2.activities.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black"
        android:title="@string/pref_header_data_sync" />
    <header
        android:fragment="com.hzbhd.alexross.subarulan2.activities.SettingsActivity$AboutPreferenceFragment"

        android:title="@string/pref_header_about" />

</preference-headers>
